src/objects/Customer_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Customer Account Number</description>
        <label>Account Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Customer Residential Address</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <description>Customer Contact Number</description>
        <inlineHelpText>Mobile Number</inlineHelpText>
        <label>Contact Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>